# sfold

./: .gitignore  README.markdown  bench.md  cabal.project  index.html  readme.md  sfold.cabal  stack.yaml  words.md
bench/: bench.hs  bench.md
examples/: deconstruct.hs  foldlExample.hs  mealy.hs  sfoldExample.hs  timeFoldExample.hs
foldls/: foldls.cabal  package.yaml
foldls/src/Control/Foldl/: Folds.hs
foldls/test/: test.hs
other/: bench.md  readme_.md  results.md
sfold/: sfold.cabal  stack.yaml
sfold-bench/: LICENSE  sfold-bench.cabal  stack.yaml
sfold-bench/bench/: bench.hs  bench.lhs
sfold/src/: SFold.hs
sfold/src/SFold/: Util.hs
src/: SFold.hs  releaser.hs
src/Control/: SFold.hs  SMealy.hs
src/Control/SFold/: Blog.hs  Example.hs  SBar.hs  Util.hs
src/SFold/: Examples.hs  SBar.hs  SMealy.hs  Util.hs
test/: ExampleDeconstruct.hs  ExampleFoldl.hs  ExampleSfold.hs  ExampleTimeFold.hs  Examples.hs  bench.hs
words/: readme.md  stack.yaml  words.cabal
words/app/: words.lhs
words/other/: table.md
words/test/: test.hs
