name: sfold
version: 0.1.0.0
synopsis:
  composable streaming folds
description:
  .
  These folds really do compose unlike the foldl ones (which you should use as they are awesome).
  .
license:
  BSD3             
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Copyright @ tonyday 2017
category:
  Control
build-type:
  Simple
extra-source-files:
  stack.yaml
  readme.md
cabal-version:
  >=1.18
homepage:
  https://github.com/tonyday567/sfold

library
  exposed-modules:
    SFold,
    SFold.Util,
    SFold.SBar,
    SFold.SMealy
    SFold.Examples  
  other-modules:
  build-depends:
    base >= 4.7 && < 4.11,
      containers, 
      foldl, 
      pipes,
      protolude,
      profunctors
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

executable sfold-bench
  main-is:
    bench.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -threaded
    -rtsopts
  hs-source-dirs:
    bench
  build-depends:
    base >= 4 && < 5,
    criterion,
    deepseq,
    foldl,
    formatting,
    machines,
    mtl,
    optparse-generic,
    perf,
    pipes,
    protolude,
    sfold,
    text,
    transformers
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/sfold
