name: sfold-bench
version: 0.1.0.0
synopsis:
  streaming benchmarks
description:
  .
  various streaming benchmarks
  .
license:
  BSD3             
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Copyright @ tonyday 2017
category:
  Control
build-type:
  Simple
extra-source-files:
  stack.yaml
cabal-version:
  >=1.18
homepage:
  https://github.com/tonyday567/sfold
executable sfold-bench
  main-is:
    bench.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -threaded
    -rtsopts
  hs-source-dirs:
    bench
  build-depends:
    base >= 4 && < 5,
    criterion,
    deepseq,
    foldl,
    formatting,
    machines,
    mtl,
    optparse-generic,
    perf,
    pipes,
    protolude,
    sfold,
    tdigest,
    text,
    transformers,
    scientific
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/sfold
