name: sfold
version: 0.1.0.0
synopsis:
  composable streaming folds
description:
  .
  These folds really do compose unlike the foldl ones (which you should use as they are awesome).
  .
license:
  BSD3             
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Copyright @ tonyday 2017
category:
  Control
build-type:
  Simple
cabal-version:
  2.0
homepage:
  https://github.com/tonyday567/sfold
library
  exposed-modules:
    SFold,
    SFold.Util,
    SFold.SBar,
    SFold.SMealy
  other-modules:
  build-depends:
    base >= 4.7 && < 5,
      containers, 
      foldl, 
      pipes,
      protolude,
      profunctors
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    InstanceSigs,
    MultiParamTypeClasses,
    NegativeLiterals,
    NoImplicitPrelude,
    OverloadedStrings,
    PatternSynonyms,
    RankNTypes,
    TypeFamilies,
    UnicodeSyntax
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/sfold
